--- a/Upload (2).html
+++ b/Upload (2).html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 <meta charset="utf_8">
 <title>Trần Chí Dĩ</title>
@@ -6,4 +7,5 @@
 <body>
 <h1>Mấy thằng lồn báo !!</h1>
 <img src="khoaha.jpg">
+</html>
 </body>
