--- a/Upload (2).html
+++ b/Upload (2).html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Mấy thằng lồn báo !!</h1>
-<img src="khoaha.jpg">
+<img src="file:///C:/Users/DELL/Desktop/khoaha.jpg">
 </body>
 </html>
